reworked until section 58

--- a/bindu.bib
+++ b/bindu.bib
@@ -1,4 +1,63 @@
-﻿@book{goraksasiddhantasamgraha1973,
+﻿@incollection{ohanlon2011religious,
+  author       = {O’Hanlon, Rosalind and Washbrook, David},
+  title        = {Religious Cultures in an Imperial Landscape},
+  booktitle    = {Religious Cultures in Early Modern India: New Perspectives},
+  series       = {SAHC},
+  volume       = {2},
+  number       = {2},
+  year         = {2011},
+  pages        = {133--137},
+keywords       = {seclit}, 
+}
+
+@book{goraksasamhita,
+  title = {Gorakṣasaṃhitā},
+  editor= {Pāṃdeya, Janārdana},
+  year={1976},
+  volume={1},
+  publisher={Sampurnanand Sanskrit Vishvavidyalaya},
+  address={Varanasi},
+  keywords={printsource},
+}
+
+@incollection{soma1960,
+  author    = {Gonda, Jan},
+  title     = {Soma},
+  booktitle = {Religionen der Menschheit. Band 11: Veda und älterer Hinduismus},
+  publisher = {Kohlhammer},
+  address   = {Stuttgart},
+  year      = {1960},
+  keywords  = {seclit}, 
+}
+
+@book{dikshit1983,
+  title        = {The Saṃnyāsa Upaniṣads},
+  subtitle     = {With the Commentary of Śrī Upaniṣad-Brahmayogin}, 
+  editor       = {Dikshit, T. R. Chintamani},
+  year         = {1966},
+  publisher    = {The Adyar Library and Research Centre},
+  address      = {Adyar, Madras}, 
+  keywords     = {seclit},
+}
+
+@book{maitreyopanishat,
+   title={Maitreyopaniṣat},
+   note={See "The Saṃnyāsa Upaniṣads"},
+   pages={199--219}, 
+   keywords={printsource},
+}
+
+@article{birch2018ayur,
+  author = {Birch, Birch},
+  title = {Premodern Yoga Traditions and Ayurveda: Preliminary Remarks on Shared Terminology, Theory, and Praxis},
+  journal = {History of Science in South Asia},
+  volume = {6},
+  year = {2018},
+  pages = {1--83},
+  keywords = {seclit}, 
+}
+
+@book{goraksasiddhantasamgraha1973,
   title        = {Gorakṣasiddhāntasaṃgraha},
   editor       = {Janārdana Śāstrī Pāṇḍeya},
   year         = 1973,
@@ -8,7 +67,6 @@
   address      = {Varanasi},
   keywords     = {printsource},
 }
-
 
 @book{bouy1994,
   author       = {Bouy, Christian},
@@ -387,8 +445,35 @@ series={The Journal of the Faculty of Letters},
 volume={44},
 publisher={Nagoya University, Department of Indian Philosophy},
 address={Nagoya},
-keywirds={seclit},
+keywords={seclit},
 }
+
+@article{ernst2003,
+  author = {Carl Ernst},
+  title = {The Islamization of Yoga in the Amrtakunda Translations},
+  journal = {Journal of the Royal Asiatic Society},
+  series = {Series 3},
+  volume = {13},
+  number = {2},
+  year = {2003},
+  pages = {199--226},
+  keywords={seclit},
+}
+
+@incollection{ernst2013,
+  title = {Chapter iv of the Bahr al-hayat},
+  booktitle = {Yoga: The Art of Transformation},
+  author = {Ernst, Carl W.},
+  pages = {59--69},
+  year = {2013},
+  editor = {Debra Diamond and Molly Emma Aitken},
+  publisher = {Smithsonian Institution},
+  address = {Washington, D.C.},
+  note = {An adjunct to the Smithsonian exhibit, "Yoga: The Art of Transformation"},
+  authoraddon = {translated from the Persian by Carl W. Ernst},
+  keywords= {seclit},   
+}
+
 
 @inbook{birch2018proliferation,
   author       = {Birch, Jason},
@@ -666,6 +751,18 @@ keywords={printsource},
   address={London},
   keywords={seclit},
 }
+
+@book{tantrika2,
+  title={Tāntrikābhidhānakośa 2}, 
+  subtitle={Dictionnaire des termes techniques de la littérature hindoue tantrique - A Dictionary of Technical Terms from Hindu Tantric Literature - Wörterbuch zur Terminologie hinduistischer Tantren}, 
+  author={Rastelli, Marion and Goodall Dominic},
+  series={Beiträge zur Kultur- und Geistesgeschichte Asiens; 76}, 
+  volume={2: K-Ñ},
+  year={2004},
+  publisher={Verlag der Österreichischen Akademie der Wissenschaften},
+  address={Wien},
+  keywords={seclit},
+ }
 
 @book{tantrika3,
   title={Tāntrikābhidhānakośa 3}, 
@@ -1693,16 +1790,6 @@ keywords={seclit}
  keywords={printsource}, 
 } 
 
-@book{birch2013,
-title={Amanaska}, 
-subtitle={The Amanaska: King of All Yogas. A Critical Edition
-and Annotated Translation with a Monographic Introduction: Ph.D. Dissertation},
- author={Birch, Jason},
- year={2013},
- publisher={University of Oxford Library},
- address={Oxford},
- keywords={printsource},
- }
 
 @book{majumdar1977,
   title={Ancient India},
@@ -2064,6 +2151,23 @@ keywords={printsource},
    keywords={printsource},
 }
 
+@book{visvarupadeva1935,
+  title = {The Vivekamārtāṇḍa (6 chapters) of Viśvarūpadeva},
+  transcribed = {Transcribed from the Trivandrum Sanskrit Series No. CXIX, Śrīcitrodayamañjarī No. 8},
+  editor = {K. Sāmbaśiva Śāstrī},
+  address = {Trivandrum},
+  publisher = {Superintendent, Government Press},
+  year = {1935},
+  keywords={printsource},
+}
+
+@book{vivekamartanda6ch,
+   title={Vivekamārtāṇḍa (6 chapters)},
+   note={See "The Vivekamārtāṇḍa (6 chapters) of Viśvarūpadeva"},
+   keywords={printsource},
+}
+
+
 @article{birch2014,
    title={Yoganidrā: An Understanding of the History and Context},
    author={Birch, Jason and Hargreaves, Jaqueline},
@@ -2350,7 +2454,13 @@ keywords={printsource},
   year = {2005},
   address= {New Delhi},
   publisher = {Motilal Banarsidass Publishers Pvt. Ltd},
-  keywords={seclit}, 
+  keywords={printsource}, 
+}
+
+@book{paratrisika,
+  title = {Parātrīśikā},
+  note = {See: Paratrisika Vivarana by Abhinavagupta: The Secret of Tantric Mysticism (2005)},
+  keywords={printsource}, 
 }
 
 @book{steinkellner2005,
@@ -2658,9 +2768,42 @@ keywords={printsource},
 
 @book{shivayogapradipika,
    title={Śivayogapradīpikā},
-   note={See A Lamp on Śivayoga: The Union of Yoga, Ritual, and Devotion in the Śivayogapradīpikā},
-   pages={268-313}, 
+   note={See "A Lamp on Śivayoga: The Union of Yoga, Ritual, and Devotion in the Śivayogapradīpikā", 2023, Ph.D. Dissertation by Seth Powell},
+   pages={268--313}, 
    keywords={printsource},
+}
+
+@book{birch2013, 
+title={The Amanaska: King of All Yogas. A Critical Edition
+and Annotated Translation with a Monographic Introduction: Ph.D. Dissertation by Seth Powell},
+ author={Birch, Jason},
+ year={2013},
+ publisher={University of Oxford Library},
+ address={Oxford},
+ keywords={printsource},
+ }
+
+@book{amanaskaed,
+   title={Amanaska},
+   note={See "Amanaska: King of All Yogas. A Critical Edition and Annotated Translation with a Monographic Introduction", 2013, Ph.D. Dissertation by Jason Birch},
+   pages={215--182}, 
+   keywords={printsource},
+}
+
+@book{uttaragita1926,
+  title        = {Uttara Gita With Explanation By Gaudapadacharya},
+  year         = {1926},
+  publisher    = {Vani Vilas Press},
+  address      = {Varanasi},
+  editor       = {Veda Nidhi Varanasi}, 
+  keywords     = {printsource},
+}
+
+@book{uttaragita1926x,
+  title        = {Uttaragītā},
+  note         = {See: Uttara Gita With Explanation By Gaudapadacharya, 1926},
+  pages        = {2-76},
+  keywords     = {printsource},
 }
 
 @book{MallinsonGheranda,
@@ -3252,7 +3395,6 @@ keywords={codex},
   address={Oxford},
   keywords={seclit}, 
 }  
-
 
 @book{hathatattvakaumudi,
   title={Haṭhatattvakaumudī},
