--- a/intro.bib
+++ b/intro.bib
@@ -1,4 +1,46 @@
-﻿@book{ytbe,
+﻿@incollection{ohanlon2011religious,
+  author       = {O’Hanlon, Rosalind and Washbrook, David},
+  title        = {Religious Cultures in an Imperial Landscape},
+  booktitle    = {Religious Cultures in Early Modern India: New Perspectives},
+  series       = {SAHC},
+  volume       = {2},
+  number       = {2},
+  year         = {2011},
+  pages        = {133--137},
+keywords       = {seclit}, 
+}
+
+@article{birch2018ayur,
+  author = {Birch, Birch},
+  title = {Premodern Yoga Traditions and Ayurveda: Preliminary Remarks on Shared Terminology, Theory, and Praxis},
+  journal = {History of Science in South Asia},
+  volume = {6},
+  year = {2018},
+  pages = {1--83},
+  keywords = {seclit}, 
+}
+
+@book{goraksasiddhantasamgraha1973,
+  title        = {Gorakṣasiddhāntasaṃgraha},
+  editor       = {Janārdana Śāstrī Pāṇḍeya},
+  year         = 1973,
+  series       = {Saraswatībhavana-Granthamālā},
+  volume       = 110,
+  publisher    = {Varanaseya Sanskrit Vishvavidyalaya},
+  address      = {Varanasi},
+  keywords     = {printsource},
+}
+
+@book{bouy1994,
+  author       = {Bouy, Christian},
+  title        = {Les Nātha-yogin et les Upaniṣads: étude d’histoire de la littérature hindoue},
+  year         = {1994},
+  publisher    = {Collège de France, Institut de civilisation indienne : Diffusion de Boccard},
+  address      = {Paris},
+  keywords     = {seclit}, 
+}
+
+@book{ytbe,
    title={Binduyogaḥ with Bhāṣaṭīkā},
    editor={Miśra, Jvālāprasāda},
    note={Printed Edition},
@@ -366,8 +408,35 @@ series={The Journal of the Faculty of Letters},
 volume={44},
 publisher={Nagoya University, Department of Indian Philosophy},
 address={Nagoya},
-keywirds={seclit},
+keywords={seclit},
 }
+
+@article{ernst2003,
+  author = {Carl Ernst},
+  title = {The Islamization of Yoga in the Amrtakunda Translations},
+  journal = {Journal of the Royal Asiatic Society},
+  series = {Series 3},
+  volume = {13},
+  number = {2},
+  year = {2003},
+  pages = {199--226},
+  keywords={seclit},
+}
+
+@incollection{ernst2013,
+  title = {Chapter iv of the Bahr al-hayat},
+  booktitle = {Yoga: The Art of Transformation},
+  author = {Ernst, Carl W.},
+  pages = {59--69},
+  year = {2013},
+  editor = {Debra Diamond and Molly Emma Aitken},
+  publisher = {Smithsonian Institution},
+  address = {Washington, D.C.},
+  note = {An adjunct to the Smithsonian exhibit, "Yoga: The Art of Transformation"},
+  authoraddon = {translated from the Persian by Carl W. Ernst},
+  keywords= {seclit},   
+}
+
 
 @inbook{birch2018proliferation,
   author       = {Birch, Jason},
@@ -1672,16 +1741,6 @@ keywords={seclit}
  keywords={printsource}, 
 } 
 
-@book{birch2013,
-title={Amanaska}, 
-subtitle={The Amanaska: King of All Yogas. A Critical Edition
-and Annotated Translation with a Monographic Introduction: Ph.D. Dissertation},
- author={Birch, Jason},
- year={2013},
- publisher={University of Oxford Library},
- address={Oxford},
- keywords={printsource},
- }
 
 @book{majumdar1977,
   title={Ancient India},
@@ -1841,6 +1900,15 @@ Sound},
   publisher={The University of Chicago Press},
   address={Chicago},
   keywords={seclit},
+}
+
+@book{white2003,
+  author       = {White, David Gordon},
+  title        = {Kiss of the Yogini: “Tantric Sex” in Its South Asian Contexts},
+  year         = {2003},
+  publisher    = {University Of Chicago Press},
+  address      = {Chicago},
+  keywords     = {seclit}, 
 }
 
 @book{datta2015,
@@ -2628,9 +2696,42 @@ keywords={printsource},
 
 @book{shivayogapradipika,
    title={Śivayogapradīpikā},
-   note={See A Lamp on Śivayoga: The Union of Yoga, Ritual, and Devotion in the Śivayogapradīpikā},
-   pages={268-313}, 
+   note={See "A Lamp on Śivayoga: The Union of Yoga, Ritual, and Devotion in the Śivayogapradīpikā", 2023, Ph.D. Dissertation by Seth Powell},
+   pages={268--313}, 
    keywords={printsource},
+}
+
+@book{birch2013, 
+title={The Amanaska: King of All Yogas. A Critical Edition
+and Annotated Translation with a Monographic Introduction: Ph.D. Dissertation by Seth Powell},
+ author={Birch, Jason},
+ year={2013},
+ publisher={University of Oxford Library},
+ address={Oxford},
+ keywords={printsource},
+ }
+
+@book{amanaskaed,
+   title={Amanaska},
+   note={See "Amanaska: King of All Yogas. A Critical Edition and Annotated Translation with a Monographic Introduction", 2013, Ph.D. Dissertation by Jason Birch},
+   pages={215--182}, 
+   keywords={printsource},
+}
+
+@book{uttaragita1926,
+  title        = {Uttara Gita With Explanation By Gaudapadacharya},
+  year         = {1926},
+  publisher    = {Vani Vilas Press},
+  address      = {Varanasi},
+  editor       = {Veda Nidhi Varanasi}, 
+  keywords     = {printsource},
+}
+
+@book{uttaragita1926x,
+  title        = {Uttaragītā},
+  note         = {See: Uttara Gita With Explanation By Gaudapadacharya, 1926},
+  pages        = {2-76},
+  keywords     = {printsource},
 }
 
 @book{MallinsonGheranda,
@@ -3222,7 +3323,6 @@ keywords={codex},
   address={Oxford},
   keywords={seclit}, 
 }  
-
 
 @book{hathatattvakaumudi,
   title={Haṭhatattvakaumudī},
