finished edition? only minor corrections remains

--- a/intro.tex
+++ b/intro.tex
@@ -193,16 +193,16 @@ Herstellung: \ \ BoD – Books on Demand GmbH, Norderstedt  \\
 
 \section{General remarks}
 \label{generalremarks}
-\lettrine[lines=2, lhang=0.2, loversize=0.25]{T}{he} \textit{Yogatattvabindu} is a early modern Sanskrit yoga text on Rājayoga that was written in the first half of the seventeenth century\footnote{The dating of the text is discussed on p.\pageref{dating}.} in northern India.\footnote{The detailed discussion of the place of origin is found on p.\pageref{placeoforigin}.} The most salient feature of the work that makes it historically significant is its highly differentiated taxonomy of types of yoga.\footnote{This is a remarkable increase in the number of proclaimed yogas compared to the standard medieval tetrad of Mantrayoga, Layayoga, Haṭhayoga and Rājayoga.} In the \textit{Yogatattvabindu}'s introduction, most manuscripts name fifteen types of yoga, presented as methods of Rājayoga. These are 1. Kriyāyoga, 2. Jñānayoga, 3. Caryāyoga, 4. Haṭhayoga, 5. Karmayoga, 6. Layayoga, 7. Dhyānayoga, 8. Mantrayoga, 9. Lakṣyayoga, 10. Vāsanāyoga, 11. Śivayoga, 12. Brahmayoga, 13. Advaitayoga, 14. Siddhayoga, and 15. Rājayoga itself. The text is a yogic compendium written in a mix of mainly prose and 45 verses in textbook-style, where its 59 topics are introduced in sections most of the time launched by recognizable phrases. The sections deal with the methods of Rājayoga and their effects, but others also cover topics like yogic physiology, the importance of the guru, an innovative concept of the Avadhūta, cosmogony and a \textit{yogarahasya}.  
+\lettrine[lines=2, lhang=0.2, loversize=0.25]{T}{he} \textit{Yogatattvabindu} is a early modern Sanskrit yoga text on Rājayoga that was written in the first half of the seventeenth century\footnote{The dating of the text is discussed on p.\pageref{dating}.} in northern India.\footnote{The detailed discussion of the place of origin is found on p.\pageref{placeoforigin}.} The most salient feature of the work that makes it historically significant is its highly differentiated taxonomy of types of yoga.\footnote{This is a remarkable increase in the number of proclaimed yogas compared to the standard medieval tetrad of Mantrayoga, Layayoga, Haṭhayoga and Rājayoga.} In the \textit{Yogatattvabindu}'s introduction, most manuscripts name fifteen types of yoga, presented as methods of Rājayoga. These are 1. Kriyāyoga, 2. Jñānayoga, 3. Caryāyoga, 4. Haṭhayoga, 5. Karmayoga, 6. Layayoga, 7. Dhyānayoga, 8. Mantrayoga, 9. Lakṣyayoga, 10. Vāsanāyoga, 11. Śivayoga, 12. Brahmayoga, 13. Advaitayoga, 14. Siddhayoga, and 15. Rājayoga itself. The text is a yogic compendium written in a mix of mainly prose and 46 verses in textbook-style, where its 59 topics are introduced in sections most of the time launched by recognizable phrases. The sections deal with the methods of Rājayoga and their effects, but others also cover topics like yogic physiology, the the Avadhūta, the importance of the guru, cosmogony and a \textit{yogarahasya}.  
 
-The \textit{Yogatattvabindu} has basically not been discussed or considered in the secondary literature on yoga. The only exception is \citeauthor{birch2014} (2014: 415–416) who briefly described its list of fifteen yogas in the context of the ``fifteen medieval yogas'' and noted that a similar taxonomy occurs in Nārāyaṇatīrtha’s \textit{Yogasiddhāntacandrikā} (17th century), a commentary on the \textit{Pātañjalayogaśāstra} that integrates fifteen medieval yogas within its \textit{aṣṭāṅga} format. An incomplete account of the fifteen yogas is found within the Sanskrit yoga text \textit{Yogasvarodaya}, which is known only through quotations in the \textit{Prāṇatoṣinī}, \textit{Yogakarṇikā} and \emph{Śabdakalpadruma}.\footnote{Manuscripts under the name of \textit{Yogasvarodaya} seem to be lost. I was not able to allocate the manuscripts of the text in any manuscript catalogue at hand.} The \textit{Yogasvarodaya} provides a total of fifteen yogas but names only eight of them in its introductory \textit{śloka}s. A complete account of the text is yet to be found and might be lost forever. The \textit{Yogasvarodaya} is the primary source and template for the compilation of the \textit{Yogatattvabindu}. Besides several authorial passages, Rāmacandra, in many instances, follows its content and structure by rewriting the \textit{Yogasvarodaya}’s \textit{śloka}s into prose or quoting them directly without attribution. Due to the incomplete transmission of the \textit{Yogasvarodaya}, Rāmacandra’s \textit{Yogatattvabindu} is a natural and valuable starting point for an unprecedented in-depth study of the complex early modern yoga taxonomies, a phenomenon that can be narrowed down very precisely in terms of time and as I will show regarding its localisation. The other source text that Rāmacandra used is the \textit{Siddhasiddhāntapaddhati} whose content he draws on, particularly in the last third of his composition. Another text that includes a similar taxonomy of twelve yogas divided into three tetrads is Sundardās’s \textit{Brājbhāṣa} yoga text named \textit{Sarvāṅgayogapradīpikā} which not just shares most of the types of yogas but also provides a different and valuable perspective on the addressed yoga categories.\footnote{For a comparative table of the complex early modern yoga taxonomies see table \ref{tab:complextaxonomies} on p. \pageref{tab:complextaxonomies}.}
+The \textit{Yogatattvabindu} has basically not been discussed or considered in the secondary literature on yoga. The only exception is \citeauthor{birch2014} (2014: 415–416) who briefly described its list of fifteen yogas in the context of the ``fifteen medieval yogas'' and noted that a similar taxonomy occurs in Nārāyaṇatīrtha’s \textit{Yogasiddhāntacandrikā} (17th century), a commentary on the \textit{Pātañjalayogaśāstra} that integrates fifteen medieval yogas within its \textit{aṣṭāṅga} format. An incomplete account of the fifteen yogas is found within the Sanskrit yoga text \textit{Yogasvarodaya}, which is known only through quotations in the \textit{Prāṇatoṣinī}, \textit{Yogakarṇikā} and \emph{Śabdakalpadruma}.\footnote{Manuscripts under the name of \textit{Yogasvarodaya} seem to be lost. I was not able to allocate the manuscripts of the text in any manuscript catalogue at hand.} The \textit{Yogasvarodaya} provides a total of fifteen yogas but names only eight of them in its introductory \textit{śloka}s. A complete account of the text is yet to be found and might be lost forever. The \textit{Yogasvarodaya} is the primary source and template for the compilation of the \textit{Yogatattvabindu}. Besides several passages, Rāmacandra, in many instances, follows its content and structure by rewriting the \textit{Yogasvarodaya}’s \textit{śloka}s into prose or quoting them directly without attribution. Due to the incomplete transmission of the \textit{Yogasvarodaya}, Rāmacandra’s \textit{Yogatattvabindu} is a natural and valuable starting point for an unprecedented in-depth study of the complex early modern yoga taxonomies, a phenomenon that can be narrowed down very precisely in terms of time and as I will show regarding its localisation. The other source text that Rāmacandra used is the \textit{Siddhasiddhāntapaddhati} whose content he draws on, particularly in the second half of his composition. Another text that includes a similar taxonomy of twelve yogas divided into three tetrads is Sundardās’s \textit{Brājbhāṣa} yoga text named \textit{Sarvāṅgayogapradīpikā} which not just shares most of the types of yogas but also provides a different and valuable perspective on the addressed yoga categories.\footnote{For a comparative table of the complex early modern yoga taxonomies see table \ref{tab:complextaxonomies} on p. \pageref{tab:complextaxonomies}.}
 
 These complex taxonomies that emerged during the 17th century crossed sectarian divides and were adapted to the specific needs of different authors and traditions. The \textit{Yogatattvabindu} thus encapsulates a large proportion of the diversity of yoga types and teachings after the \textit{Haṭhapradīpikā} (15th century) that were adopted and practiced by a broad spectrum of religious traditions and strata of Indian society. In the particular case of the \textit{Yogatattvabindu}, there are various statements throughout the text that reveal a strategy to radically detach yoga from its renunciate connotations and to enforce the supremacy and universality of Rājayoga as a practice that can yield the highest benefits even for practitioners who enjoy worldly pleasures and an extravagant lifestyle. Textual evidence suggests the possibility that \textit{Yogatattvabindu} may be a unique example of a Rājayoga text that was composed for warrior aristocracy and members of a royal court. 
 
 %In addition, the analysis of the \textit{Yogatattvabindu} and the historical retracig of its teachings provides insight into a complex network of at least twenty texts,\footnote{This intertextual network which shares those specific teachings consists of the \textit{Netratantra}, \textit{Śāradatilakatantra}, \textit{Sarvadurgatipariśodhanatantra}, \textit{Ūrmikaulārṇavatantra}, \textit{Tantrāloka}, \textit{Manthanabhairavatantra}, \textit{Śārṅgadhārapaddhati}, \textit{Vivekamārtaṇḍa}, \textit{Śivayogapradīpikā}, (recensions of the \textit{Haṭhapradīpikā}), \textit{Amaraughaśāsana}, \textit{Yogasvarodaya}, \textit{Sarvāṅgayogapradīpikā}, \textit{Nityanāthapaddhati}, \textit{Siddhasiddhāntapaddhati}, \textit{Yogatattvabindu}, \textit{Yogacūḍāmaṇyupaniṣad}, \textit{Maṇḍalabrāhmaṇopaniṣat}, \textit{Haṭhatattvakaumudi} and \textit{Haṭhasaṃketacandrikā}.} all of which include one specific set of yoga theorems and practices with minor deviations - three to five \textit{cakra}s, sixteen \textit{ādhāra}s, two to five \textit{lakṣya}s, and five \textit{vyoma}s. This ancient Śaiva paradigm gave rise to an intertextual network that spans at least an entire millennium. It begins in early śivaite Tantras such as the \textit{Netratantra} and ends in the large late medieval Yoga compendiums like the \textit{Haṭhatattvakaumuḍī} and \textit{Haṭhasaṅketacandrikā}. The examination of this network provides insights into the history of the related yoga traditions and enables, for example, the reconstruction of the genesis of individual yoga categories mentioned in the fifteen Yogas, such as Lakṣyayoga, whose techniques were originally taught in early śivaite Tantras, but were only labeled as a separate type of yoga from the 16th century onwards.
-One printed edition of the \textit{Yogatattvabindu} was published in 1905 with a Hindi translation and based on an unknown manuscript(s).\footnote{Beleg???} This publication has the title ``\textit{Binduyoga}'' confirmed by the printed text’s colophon. However, as I discuss in the course of the introduction, the text was likely known as \textit{Yogatattvabindu}. The consulted manuscripts contain significant discrepancies, structural differences and variant readings between them and the printed edition. Furthermore, the manuscripts are scattered over the northern Indian subcontinent and Nepal, which suggests that it was widely transmitted at some point. Lenghty passages of the \textit{Yogatattvabindu} are quoted without attribution in a text called \textit{Yogasaṃgraha} and Sundaradeva’s \textit{Haṭhasaṅketacandrikā}. A critical edition will undoubtedly improve on the published edition and shed further light on the transmission of this important work.
+One printed edition of the \textit{Yogatattvabindu} was published in 1905 with a Hindi translation and based on an unknown manuscript(s).\footnote{\fullcite{ytbe}.} This publication has the title ``\textit{Binduyoga}'' confirmed by the printed text’s colophon. However, as I discuss in the course of the introduction, the text was originally known as \textit{Yogatattvabindu}. The consulted manuscripts contain significant discrepancies, structural differences and variant readings between them and the printed edition. Furthermore, the manuscripts are scattered over the northern half of the Indian subcontinent and Nepal, which suggests that it was widely transmitted at some point. Lenghty passages of the \textit{Yogatattvabindu} are quoted without attribution in a text called \textit{Yogasaṃgraha} and Sundaradeva’s \textit{Haṭhasaṅketacandrikā}. A critical edition will undoubtedly improve on the published edition and shed further light on the transmission of this important work.
 
-This dissertation contains an introduction, critical edition and annotated translation of the \textit{Yogatattvabindu}. Besides an overview of the manuscript evidence and the editorial policies underlying the edition, the introduction discusses provenance, authorship and the audience of the \textit{Yogatattvabindu}. Furthermore, an unprecedented systematic and comprehensive comparative analysis of the complex early modern yoga taxonomies based on the new critical edition of the \textit{Yogatattvabindu} and a novel and up-to-date examination of the texts mentioned above with similarly complex yoga taxonomies will determine their position within the broader history of yoga and improve our knowledge of the development of yoga traditions in the early modern period.
+This dissertation contains an introduction, critical edition and annotated translation of the \textit{Yogatattvabindu}. Besides an overview of the manuscript evidence and the editorial policies underlying the edition, the introduction discusses provenance, authorship and the audience of the \textit{Yogatattvabindu}. Furthermore, an unprecedented systematic and comprehensive comparative analysis of the complex early modern yoga taxonomies based on the new critical edition of the \textit{Yogatattvabindu} and a novel and up-to-date examination of the texts mentioned above with similarly complex yoga taxonomies will determine their position within the broader history of yoga and enhance our knowledge of the development of yoga traditions in the early modern period.
 
 \section{Dating the \textit{Yogatattvabindu} and the \emph{Yogasvarodaya}}
 \label{dating}
@@ -299,6 +299,8 @@ Other topics include a description of the tamed Avadhūta,\footnote{The original
 \section{Rāmacandra's audience}
 \label{ytb-audience}
 
+%low register of Sanskrit because he is Sannyasin who could not do any better... 
+%Also, I am not quite sure I see the significant difference between adopting kartavyam and kathanīyam in the first case. Whether the secrets of yoga are to be done or told in front of the king suggests that this yoga was meant to be disseminated in the court of a good king. Is this not right, in your view?
 %%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1698,7 +1700,7 @@ In section \uproman{48}, in the context of the divisions of the lotus in the hea
 
 The comparative analysis of Dhyānayoga within the complex yoga taxonomies presented in the three aforementioned texts positions Dhyānayoga invariably as a method of Rājayoga. Nārāyaṇatīrtha specifies Dhyānayoga as a means to counteract the instability of the mind. His description suggests that the meditation techniques fall into two categories: a general category that includes meditations on the supreme deity in various forms, light, etc., and a category of techniques particularly suitable for beginners. The latter category includes \textit{tīrthabhāvanā} (meditation on microcosmic sacred places), \textit{devabhāvanā} (meditation on deities), \textit{lokabhāvanā} (meditation on worlds situated in the microcosm of the body), \textit{varṇabhāvanā} (meditation on letters within \textit{cakra}s), and \textit{tattvabhāvanā} (meditation on fundamental principles).
 
-Dhyānayoga is mentioned in the taxonomies of both the \textit{Yogatattvabindu} and the \textit{Yogasvarodaya}, but it is not treated as an individual topic. Nonetheless, various meditation practices are found throughout these texts. Various forms of \textit{dhyāna} are mentioned, such as meditation on \textit{cakra}s, \textit{lakṣya}s (targets or focal points), and various bodily locations. In the context of Aṣṭāṅgayoga, the \textit{Yogasvarodaya} describes two types of \textit{dhyāna}: a gross form associated with mantras and a subtle form without mantras. Although Dhyānayoga does not have a dedicated section in either text, it is implicitly present throughout. Meditation remains one of the most central themes in the discussions within both texts. It seems that Rāmacandra and the unknown author of the \emph{Yogasvarodaya} did not introduce Dhyānayoga as a separate section, as \textit{dhyāna} is a topic that permeates almost all other methods of Rājayoga, and he wanted to avoid redundancy.  
+Dhyānayoga is mentioned in the taxonomies of both the \textit{Yogatattvabindu} and the \textit{Yogasvarodaya}, but it is not treated as an individual topic. Nonetheless, various meditation practices are found throughout these texts. Various forms of \textit{dhyāna} are mentioned, such as meditation on \textit{cakra}s, \textit{lakṣya}s (targets or focal points), and various bodily locations. In the context of Aṣṭāṅgayoga, the \textit{Yogasvarodaya} describes two types of \textit{dhyāna}: a gross form associated with mantras and a subtle form without mantras. Although Dhyānayoga does not have a dedicated section in either text, it is implicitly present throughout. Meditation remains one of the most central themes in the discussions within both texts. It seems that Rāmacandra and the unknown author of the \emph{Yogasvarodaya} did not introduce Dhyānayoga as a separate section, as \textit{dhyāna} is a topic that permeates almost all other methods of Rājayoga, perphaps to avoid redundancy.  
 
 \section{Mantrayoga}
 \label{dhyānayogaintro}
@@ -3045,7 +3047,7 @@ The term Satyayoga, the ``true Yoga'' appears in the \emph{Yogatattvabindu} in \
    Śakti shines forth as expansion and as contraction. He who unites those two, he experiences true yoga.
   \end{quote}
 
-  The term \textit{satyayoga} is not included in the initial taxonomy of the fifteen methods for Rājayoga. Rāmacandra adopted the verse from the \emph{Siddhasiddhāntapaddhati} 6.64 and redacted it according to his own agenda and migled it with \emph{Siddhasiddhāntapaddhati} 4.19.\footnote{Cf. p.\pagereg{satyaavadhuta}.} All manuscripts of the \emph{Yogatattvabindu} read \textit{satyayogabhāk} in the fourth \textit{pāda} of the verse. Here, the source text reads \textit{siddhayogiraṭ}. Rāmacandra might have used the term as a synonym for Siddhayoga\footnote{The Siddhayoga of \textit{Yogatattvabindu} is discussed on p. \pageref{siddhayogaintro}.} or it might be a typographical error of Siddhayoga. By the definition of this verse, Satyayoga would be a practice in which the practitioner dedicates himself to the union of two aspects of Śakti, here defined as expansion (\textit{prasāra}) and contraction (\textit{saṃkoca}). In the light of the source text, it could be a corruption of the term \textit{siddhayoga°} which could have arisen from the homoioteleutic ending of the preceding verse. Furthermore, no other medieval or premodern yoga texts use the term to designate a distinct type of yoga. For this reason, it seems unlikely that this term is a specific category of yoga. 
+  The term \textit{satyayoga} is not included in the initial taxonomy of the fifteen methods for Rājayoga. Rāmacandra adopted the verse from the \emph{Siddhasiddhāntapaddhati} 6.64 and redacted it according to his own agenda and migled it with \emph{Siddhasiddhāntapaddhati} 4.19.\footnote{Cf. p.\pageref{satyaavadhuta}.} All manuscripts of the \emph{Yogatattvabindu} read \textit{satyayogabhāk} in the fourth \textit{pāda} of the verse. Here, the source text reads \textit{siddhayogiraṭ}. Rāmacandra might have used the term as a synonym for Siddhayoga\footnote{The Siddhayoga of \textit{Yogatattvabindu} is discussed on p. \pageref{siddhayogaintro}.} or it might be a typographical error of Siddhayoga. By the definition of this verse, Satyayoga would be a practice in which the practitioner dedicates himself to the union of two aspects of Śakti, here defined as expansion (\textit{prasāra}) and contraction (\textit{saṃkoca}). In the light of the source text, it could be a corruption of the term \textit{siddhayoga°} which could have arisen from the homoioteleutic ending of the preceding verse. Furthermore, no other medieval or premodern yoga texts use the term to designate a distinct type of yoga. For this reason, it seems unlikely that this term is a specific category of yoga. 
   
 \subsection{Sahajayoga}
 \label{sahajayoga}
